# procedural-textures

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: cmake.yml
demo/src/: Main.cpp  Nodes.h
editor/src/: Main.cpp  Nodes.h
lib/include/ptex/: Core.h  Kernel.cuh  Math.cuh  PTex.h  Texture.cuh  Texture.h  Vector.cuh  Vector.h
lib/src/: Core.cpp  Texture.cpp  Texture.cu
